1.5/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-srv
spec:
  selector:
    app: backend
  ports:
  - name: multitool-http
    protocol: TCP
    port: 8080
    targetPort: 8080
