1.5/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-srv
spec:
  selector:
    app: frontend
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
