1.5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: x-netology.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-srv
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-srv
            port:
              number: 8080
